<resources>
    <string name="app_name">BukaAmal</string>
    <string name="messageLogin">Silahkan login menggunakan akun bukalapak anda</string>
    <string name="messageDaftar">Silahkan buat akun baru anda</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="hintEmail">Email</string>
    <string name="hintJenisKelamin">Jenis Kelamin</string>
    <string name="hintNamaLengkap">Nama Lengkap</string>
    <string name="buttonLogin">Login</string>
    <string name="daftarBaru">Daftar Akun Baru</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="disclaimer"> <![CDATA[
    <font color="white">Dengan mendaftar kamu telah menyetujui</font> <font color="white"><u>aturan penggunaan</u>
    </font> <font color="white">dan</font> <font color="white"><u>kebijakan privasi</u>
    </font> <font color="white">Bukalapak.com</font>
  ]]></string>
    <string name="hintJudulBerita">Judul Berita</string>
    <string name="hintDana">Dana yang dibutuhkan</string>
    <string name="hintDeadline">Deadline</string>
    <string name="hintKategori">Kategori</string>
    <string name="hintLokasi">Lokasi</string>
    <string name="hintCeritaGalang">Cerita penggalang dana</string>
    <string name="tambahFoto">Lampirkan Foto</string>
    <string name="tambahFotoKTP">Lampirkan Foto KTP</string>
    <string name="simpanlanjut">Simpan dan Lanjutkan</string>
    <string name="hintTempatLahir">Tempat Lahir</string>
    <string name="hintTanggalLahir">Tanggal Lahir</string>
    <string name="hintAlamat">Alamat</string>
    <string name="hintNoRek">Nomor Rekening</string>
    <string name="hintNoTel">Nomor Telepon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_admin">MenuAdmin</string>
</resources>
