<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/logobukaamal" />

        <TextView
            android:id="@+id/messageLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoLogin"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/messageLogin"
            android:textColor="@color/putih"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edUsernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageLogin"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableRight="@drawable/icon_user"
            android:fontFamily="sans-serif"
            android:hint="@string/hintUsername"
            android:minHeight="45dp"
            android:paddingLeft="24dip"
            android:paddingRight="24dip"
            android:textColor="@color/hitam"
            android:textColorHint="@color/abu"
            android:textSize="14sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edUsernameLogin"
            android:layout_marginTop="10dp"
            android:textColorHint="@drawable/selector_hint"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="sans-serif"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:minHeight="45dp"
                android:paddingLeft="24dip"
                android:paddingRight="24dip"
                android:textColor="@color/hitam"
                android:textColorHint="@drawable/selector_hint"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_marginEnd="17dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:foregroundGravity="center"
                android:gravity="right"
                android:text="Lupa Password?"
                android:textColor="@color/putih"
                android:textSize="14sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutPasswordLogin"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_button_login"
            android:fontFamily="sans-serif"
            android:text="@string/buttonLogin"
            android:textAllCaps="false"
            android:textColor="@color/putih"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btnHalDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_button_strokewhite"
            android:fontFamily="sans-serif"
            android:text="@string/daftarBaru"
            android:textAllCaps="false"
            android:textColor="@color/putih"
            android:textSize="14sp" />


    </LinearLayout>
</ScrollView>
